add scores counter to tetris game

--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
     <div></div>
     <div></div>
 </div>
+<div class="tetris-score">
+    <span class="score-count">0</span>
+    <img class="score-logo" src="./assets/images/score-logo.png" alt="score"/>
+</div>
 <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
