--- a/index.html
+++ b/index.html
@@ -208,9 +208,21 @@
     <div></div>
     <div></div>
 </div>
-<div class="tetris-score">
-    <span class="score-count">0</span>
-    <img class="score-logo" src="./assets/images/score-logo.png" alt="score"/>
+<div class="tetris-info">
+    <div class="tetris-score">
+        <span class="score-count">0</span>
+        <img class="score-logo" src="./assets/images/score-logo.png" alt="score"/>
+    </div>
+    <div class="game-controls">
+        <a class="game-control" data-game="play"><img src="./assets/icons/play.png" alt="play"></a>
+        <a class="game-control" data-game="pause"><img src="./assets/icons/pause.png" alt="pause"></a>
+        <a class="game-control" data-game="stop"><img src="./assets/icons/close.png" alt="close"></a>
+    </div>
+</div>
+<div class="game-menu-container">
+    <div class="game-menu">
+        <a class="start-game">Начать игру!</a>
+    </div>
 </div>
 <script type="module" src="./scripts/index.js"></script>
 </body>
